Tests/Fail/Test054.ML
structure S: sig datatype t = X end = struct type t = real end;
